# coding

./: .gitignore  CLAUDE.md  README.md  agents.md  claude.py  dashboard.yaml  default.yaml  install.sh  pyproject.toml  skills-lock.json
.claude/skills/: README.md
.claude/skills/code-creator/: SKILL.md
.claude/skills/goal-tracker-workspace/iteration-1/create-new-goal/test-project/: pyproject.toml
.claude/skills/goal-tracker-workspace/iteration-1/create-new-goal/test-project/.github/workflows/: ci.yml
.claude/skills/goal-tracker-workspace/iteration-1/create-new-goal/test-project/src/: calculator.py
.claude/skills/goal-tracker-workspace/iteration-1/create-new-goal/test-project/src/test_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
.claude/skills/goal-tracker-workspace/iteration-1/create-new-goal/test-project/tests/: test_calculator.py
dashboard/: config.py  discovery.py  main.py
dashboard/static/: index.html
diagram/paas/: mcp-diagram.yaml
goal/clear-goal/: multi-folder-yaml-dashboard.yaml
save/: template.workflows.yaml
schema/paas/: mcp.py
script/: json2yaml.py  update_system_config.py
script/script-test/: test_json2yaml.py
src/paas/: __init__.py  docker_deployer.py  lifecycle.py  nginx_config.py  port_allocator.py  registry.py  router.py
template/agents/: template.agents-essential.yaml  template.agents-full.yaml
template/config/: template.env.yaml  template.model.yaml  template.provider.yaml
template/workflow/: template.workflow-essential.yaml
test/: conftest.py  test_api.py  test_claude.py  test_config.py  test_discovery.py
(+65 files in other folders)
